--- a/client/package.json
+++ b/client/package.json
@@ -9,27 +9,37 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.11.1",
     "@react-three/drei": "^9.58.5",
     "@react-three/fiber": "^8.12.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/node": "^20.4.5",
+    "axios": "^1.4.0",
     "framer-motion": "^10.9.4",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "react-slick": "^0.29.0",
     "sass": "^1.64.1",
     "three": "^0.150.1",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "valtio": "^1.10.3"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.17",
+    "@types/react-color": "^3.0.6",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-slick": "^0.23.10",
+    "@types/three": "^0.154.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.3.0",
+    "typescript": "^5.1.6",
     "vite": "^4.2.0"
   }
 }
