--- a/client/package.json
+++ b/client/package.json
@@ -9,23 +9,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
     "@react-oauth/google": "^0.11.1",
     "@react-three/drei": "^9.58.5",
     "@react-three/fiber": "^8.12.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
     "@types/node": "^20.4.5",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.9.4",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.64.1",
     "three": "^0.150.1",
     "use-react-router-breadcrumbs": "^4.0.1",
-    "valtio": "^1.10.3"
+    "valtio": "^1.10.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
