--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,6 @@
 # OPENAI_API_KEY=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
 MONGO_URL=mongodb+srv://tuancn8k63uet:161200@clusterpage.kgwiytx.mongodb.net/?retryWrites=true&w=majority
 
-OPENAI_API_KEY=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
+OPENAI_API_KEY=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
+GOOGLE_CLIENT_ID=665491888833-67430qmubpgvlt7nmoa7mpi7l2a613km.apps.googleusercontent.com
+JWT_SECRET=NMT_POD
