--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -7,7 +7,5 @@
   "useTabs": false,
   "singleQuote": true,
   "printWidth": 120,
-  "jsxSingleQuote": true,
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "pluginSearchDirs": false
+  "jsxSingleQuote": true
 }
