--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,10 @@
     "google-auth-library": "^9.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "streamifier": "^0.1.1"
   },
   "engines": {
     "node": ">=14.20.1"
