implement stripe for checkout

--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
     "socket.io": "^4.7.2",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "stripe": "^14.5.0"
   },
   "engines": {
     "node": ">=14.20.1"
